# OpenText_NMohan

./: .gitignore  CMakeLists.txt  README.md  helpers.hpp  main.cpp
archive/: cd_catalog.xml  error1.xml  error2.xml  error3.xml
libs/htmlbuilder/: CMakeLists.txt  htmlbuilder.cpp  htmlbuilder.hpp
libs/xmlparser/: CMakeLists.txt  xmlparser.cpp  xmlparser.hpp
